--- a/src/pages/css/projects.css
+++ b/src/pages/css/projects.css
@@ -1,7 +1,13 @@
 .projects-section {
   position: relative;
-  padding: 2rem;
+  height: calc(100vh - 100.8px);
+  padding: 1rem;
   background-color: #ffffff;
+  
+}
+
+.projects-title {
+  margin-bottom: 1rem;
 }
 
 .scroll-wrapper {
@@ -12,6 +18,7 @@
 
 .projects-container {
   display: flex;
+
   overflow-x: auto;
   scroll-behavior: smooth;
   padding: 1rem 2rem;
